@@ -33,7 +33,7 @@ CAMLnoret CAMLextern void caml_sys_error (value);
 CAMLnoret CAMLextern void caml_sys_io_error (value);
 
 CAMLextern double caml_sys_time_unboxed(value);
-CAMLextern void caml_sys_init (char_os * exe_name, char_os ** argv);
+CAMLextern void caml_sys_init (char_os *, char_os *, char_os ** argv);
 CAMLextern void caml_locate_standard_library (const char_os *);
 
 CAMLnoret CAMLextern void caml_do_exit (int);
