@@ -23,6 +23,7 @@ type backend_type =
 
 external get_config: unit -> string * int * bool = "caml_sys_get_config"
 external get_executable_name : unit -> string = "caml_sys_executable_name"
+external get_interpreter_name : unit -> string = "caml_sys_interpreter_name"
 external argv : string array = "%sys_argv"
 external big_endian : unit -> bool = "%big_endian"
 external word_size : unit -> int = "%word_size"
@@ -34,6 +35,7 @@ external cygwin : unit -> bool = "%ostype_cygwin"
 external get_backend_type : unit -> backend_type = "%backend_type"
 
 let executable_name = get_executable_name()
+let interpreter = get_interpreter_name()
 let (os_type, _, _) = get_config()
 let backend_type = get_backend_type ()
 let big_endian = big_endian ()
