@@ -11,6 +11,10 @@ Working version
 
 ### Standard library:
 
+- #13???: Add Sys.interpreter containing the full path (if available) to the
+  currently executing runtime.
+  (David Allsopp, review by ???)
+
 ### Other libraries:
 
 ### Tools:
